All html pages are created and linked

--- a/templates/user_search_parking.html
+++ b/templates/user_search_parking.html
@@ -22,9 +22,9 @@
       <nav class="nav-menu">
         <a href="user_dashboard.html" class="nav-item">Dashboard</a>
         <a href="user_search_parking.html" class="nav-item active">Search Parking</a>
-        <a href="summary_for_user.html" class="nav-item">Summary</a>
-        <a href="edit_profile.html" class="nav-item">Edit Profile</a>
-        <a href="logout_user.html" class="nav-item">Logout</a>
+        <a href="user_summary.html" class="nav-item">Summary</a>
+        <a href="user_edit_profile.html" class="nav-item">Edit Profile</a>
+        <a href="user_logout.html" class="nav-item">Logout</a>
       </nav>
     </aside>
 
